[package]
name = "mpc_frost"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
frost-ed25519 = "2.2.0"
futures = "0.3.31"
hex = "0.4.3"
libp2p = { version = "0.56.0", features = ["noise", "tcp", "tokio", "macros", "gossipsub", "mdns", "yamux"] }
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
